--- a/piplookupapp.yml
+++ b/piplookupapp.yml
@@ -208,4 +208,6 @@ jhipster:
 # https://www.jhipster.tech/common-application-properties/
 # ===================================================================
 
-# application:
+application:
+  medicare:
+    url: hello from pip lookup github
